# peni3s

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/eugeneyche/peni3s/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  jniLibs
app/src/main/cpp/: gl_wrapper.h  graphics.cpp  graphics.h  lib.cpp  lib.h  math.h  mesh.cpp  mesh.h  technique.cpp  technique.h  tiny_obj_loader.cpp  tiny_obj_loader.h
app/src/main/java/com/eugeneyche/peni3s/: GraphicsLib.java  GraphicsView.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/eugeneyche/peni3s/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
